--- a/Näyttöpaja projekti/style.css
+++ b/Näyttöpaja projekti/style.css
@@ -28,6 +28,10 @@ hr {
     width: 700px;
 }
 
+.feedback-text {
+    margin: 10px;
+}
+
 ul {
     list-style-type: none;
     margin: 25px;
@@ -61,10 +65,37 @@ li a:hover {
     text-align: center;
 }
 
+.lomake {
+    display: grid;
+    position: relative;
+    justify-content: center;
+    padding: 10px;
+    margin-top: 5px;
+    color: #b0bec5;
+    resize: none;
+}
+
 .email {
+    max-width: 200px;
+    padding: 5px;
+    margin: auto;
+    background-color: #1b3c4b;
+    color: #b0bec5;
+    border-radius: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    outline: none;
+}
+
+.email:focus {
     max-width: 190px;
     padding: 5px;
     margin: auto;
+    background-color: #091419;
+    color: whitesmoke;
+    border-radius: 5px;
 }
 
 .rating {
@@ -76,23 +107,85 @@ li a:hover {
     max-width: 100px;
     margin: auto;
     padding: 3px;
+    background-color: #1b3c4b;
+    color: #b0bec5;
+    border-radius: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    outline: none;
+    cursor: pointer;
 }
 
-.lomake {
-    display: grid;
-    position: relative;
-    justify-content: center;
-    padding: 10px;
-    margin-top: 5px;
+.rating-box:focus {
+    max-width: 100px;
+    margin: auto;
+    padding: 3px;
+    background-color: #1b3c4b;
     color: #b0bec5;
-    resize: none;
+    border-radius: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    outline: none;
+    cursor: pointer;
+    background-color: #091419;
+    color: whitesmoke;
 }
 
 .extra-comment-box {
     resize: none;
     padding: 7px;
+    background-color: #1b3c4b;
+    color: #b0bec5;
+    border-radius: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    outline: none;
+}
+
+.extra-comment-box {
+    resize: none;
+    padding: 7px;
+    background-color: #1b3c4b;
+    color: #b0bec5;
+    border-radius: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    outline: none;
+}
+
+.extra-comment-box:focus {
+    resize: none;
+    padding: 7px;
+    background-color: #1b3c4b;
+    color: #b0bec5;
+    border-radius: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+    outline: none;
+    background-color: #091419;
+    color: whitesmoke;
 }
 
 .submit {
     margin: auto;
+    background-color: #1b3c4b;
+    color: #b0bec5;
+    padding: 5px;
+    border-radius: 5px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: #2d647d;
+    outline: none;
+    cursor: pointer;
 }
