--- a/Näyttöpaja projekti/about me style.css
+++ b/Näyttöpaja projekti/about me style.css
@@ -1,22 +1,52 @@
 body {
-    font-style: italic;
-    margin: 0;
-    background-color: lightgray;
-  }
-  
-  h1{
-    text-align: center;
-    padding: 10px;
-  }
-  .one{
-    background-color: darkgray;
-    padding: auto;
-    margin: auto;
-    width: 710px;
-    height: 550px;
-    text-align: left;
-   border: 5px solid black;
-   background-color: lightgray;
-  
-  }
-  
+  background-color: #091419;
+  color: whitesmoke;
+  text-align: center;
+}
+
+hr {
+  max-width: 150px;
+}
+
+h1 {
+  padding-top: 20px;
+}
+
+p {
+  font-size: x-large;
+  line-height: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 25px;
+  padding: 0;
+  overflow: hidden;
+  background-color: #245064;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: inline-block;
+  color: whitesmoke;
+  text-align: center;
+  padding: 20px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+.sisempi-laatikko {
+  background-color: #122832;
+  margin: auto;
+  max-width: 1300px;
+  height: 300px;
+}
